# VideoCompressor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  VideoCompressor.py  pyproject.toml  requirements.txt
